# nanogear

./: .cproject  .gitignore  .project  CMakeLists.txt  CTestConfig.cmake  ProjectHome.md  VERSION.cmake  nanogear.kdev4
cli/: CMakeLists.txt  generate_project.cpp  generate_project.hpp  main.cpp  utils.cpp  utils.hpp
cmake/modules/: NanogearCPackConfig.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
examples/: CMakeLists.txt  example_server.cpp
examples/clientinfo/: CMakeLists.txt  main.cpp
examples/directory/: CMakeLists.txt  main.cpp
examples/forms/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/webforms2/: CMakeLists.txt  main.cpp
httpd/: CMakeLists.txt  qhttpserver.cpp  qhttpserver.h
lib/: CMakeLists.txt  application.h  context.h  genheaders.sh  httpserver.cpp  httpserver.h  representation.h  resource.h  response.h  router.cpp  router.h  server.cpp  server.h  stringrepresentation.h  uniform.h
lib/Nanogear/: Application  Application.cpp  Application.h  CMakeLists.txt  CharacterSet.cpp  CharacterSet.h  ClientInfo  ClientInfo.cpp  ClientInfo.h  Context  Context.cpp  Context.h  MediaType  MediaType.cpp  MediaType.h  Method  Method.cpp  Method.h  MimeType  MimeType.cpp  MimeType.h  Preference  Preference.h  PreferenceList  PreferenceList.h  Request  Request.cpp  Request.h  Response  Response.cpp  Response.h  Router  Router.cpp  Router.h  Server  Server.cpp  Server.h  Status  Status.cpp  Status.h
lib/Nanogear/Concrete/: CMakeLists.txt
lib/Nanogear/Concrete/HTTP/: CMakeLists.txt  ConnectionHandlerThread  ConnectionHandlerThread.cpp  ConnectionHandlerThread.h  HTTPServer  HTTPServer.cpp  HTTPServer.h  ThreadedHTTPServer.cpp  ThreadedHTTPServer.h  Utility  Utility.h
lib/Nanogear/Resource/: CMakeLists.txt  Directory  Directory.cpp  Directory.h  Representation  Representation.cpp  Representation.h  Resource  Resource.cpp  Resource.h  StringRepresentation  StringRepresentation.h
libs/: CMakeLists.txt  resource.cpp  resource.h
libs/http/: CMakeLists.txt
libs/http/nanogear/http/: client.cpp  client.hpp  server.cpp  server.hpp
libs/rest/: CMakeLists.txt  COPYING  application.cpp  application.hpp  client.cpp  client.hpp  component.cpp  component.hpp  connector.cpp  connector.hpp  context.cpp  context.hpp  controller.cpp  controller.hpp  filter.cpp  filter.hpp  restlet.cpp  restlet.hpp  uniform.cpp  uniform.hpp
libs/rest/data/: challenge_request.cpp  challenge_request.hpp  challenge_response.cpp  challenge_response.hpp  challenge_scheme.cpp  challenge_scheme.hpp  character_set.cpp  character_set.hpp  client_info.cpp  client_info.hpp  conditions.cpp  conditions.hpp  cookie.cpp  cookie.hpp  cookie_setting.cpp  cookie_setting.hpp  dimension.hpp  encoding.cpp  encoding.hpp  form.hpp  language.hpp  media_type.cpp  media_type.hpp  metadata.cpp  metadata.hpp  method.cpp  method.hpp  parameter.cpp  parameter.hpp  preference.cpp  preference.hpp  protocol.cpp  protocol.hpp  reference.cpp  reference.hpp  reference_list.hpp  request.hpp  response.cpp  response.hpp  server_info.cpp  (+1 more)
libs/rest_api/: CMakeLists.txt  TODO
libs/rest_api/nanogear/rest/: AUTHORS  CMakeLists.txt  application.cpp  application.hpp  client.cpp  client.hpp  component.cpp  component.hpp  connector.cpp  connector.hpp  context.cpp  context.hpp  controller.cpp  controller.hpp  filter.cpp  filter.hpp  handler.cpp  handler.hpp  route.hpp  router.cpp  router.hpp  server.cpp  server.hpp  uniform.cpp  uniform.hpp  virtual_host.hpp
libs/rest_api/nanogear/rest/data/: challenge_request.cpp  challenge_request.hpp  challenge_response.cpp  challenge_response.hpp  challenge_scheme.cpp  challenge_scheme.hpp  character_set.cpp  character_set.hpp  client_info.cpp  client_info.hpp  conditions.hpp  cookie.hpp  cookie_setting.cpp  cookie_setting.hpp  dimension.hpp  encoding.cpp  encoding.hpp  media_type.cpp  media_type.hpp  message.cpp  message.hpp  metadata.cpp  metadata.hpp  method.cpp  method.hpp  parameter.cpp  parameter.hpp  preference.hpp  product.cpp  product.hpp  reference.hpp  reference_list.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server_info.hpp  status.cpp  status.hpp  tag.cpp  (+3 more)
libs/rest_api/nanogear/rest/resource/: representation.cpp  representation.hpp  variant.cpp  variant.hpp
libs/rest_api/nanogear/rest/util/: engine.cpp  engine.hpp  helper.cpp  helper.hpp  uri_template.cpp  uri_template.hpp
libs/rest_api/tests/: CMakeLists.txt  media_type.cpp  method.cpp  uri_template.cpp
libs/rest_http/: CMakeLists.txt
libs/rest_http/nanogear/rest/http/: engine.cpp  engine.hpp  response.cpp  response.hpp
libs/utils/nanogear/utils/: uri_template.cpp  uri_template.hpp
nbproject/: Makefile-Default.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
resources/emacs/: README
resources/emacs/yasnippet/text-mode/cc-mode/: acc  hacc  ngh  ngrh
resources/templates/: cpp  hpp
resources/templates/cli/: cpp  hpp
resources/templates/libs/: cpp  hpp
scripts/: genheaders.sh
src/: CMakeLists.txt
src/connectors/ihttp/: CMakeLists.txt  NHTTPServer  nconnectionhandlerthread.cpp  nconnectionhandlerthread.h  nhttpserver.cpp  nhttpserver.h  nutility.h
src/core/: CMakeLists.txt  NApplication  NClientInfo  NDirectoryResource  NMethod  NMimeType  NPreference  NPreferenceList  NRepresentation  NRequest  NResource  NResponse  NRouter  NServer  NStatus  napplication.h  nclientinfo.h  nconnector.h  ndirectoryresource.cpp  ndirectoryresource.h  nmetadata.h  nmethod.cpp  nmethod.h  nmimetype.cpp  nmimetype.h  npreference.h  npreferencelist.h  nprotocol.cpp  nprotocol.h  nrepresentation.cpp  nrepresentation.h  nrequest.h  nresource.cpp  nresource.h  nresponse.h  nrouter.cpp  nrouter.h  nserver.h  nstatus.cpp  nstatus.h  (+1 more)
www/: header.xcf
